--- a/DACK/DACK/Views/Home/Contact.cshtml
+++ b/DACK/DACK/Views/Home/Contact.cshtml
@@ -2,18 +2,50 @@
     ViewBag.Title = "Contact";
 }
 <main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
-
-    <address>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399<br />
-        <abbr title="Phone">P:</abbr>
-        425.555.0100
-    </address>
-
-    <address>
-        <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-        <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-    </address>
+    <section class="contact spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6">
+                    <div class="contact__text">
+                        <div class="section-title">
+                            <span>Thông tin liên hệ</span>
+                            <h2>Hãy liên hệ với chúng tôi!</h2>
+                            <p>Chúng tôi luôn sẵn sàng lắng nghe và hỗ trợ bạn 24/7 về các đơn hàng và sản phẩm.</p>
+                        </div>
+                        <ul>
+                            <li>
+                                <h4>Việt Nam</h4>
+                                <p>Số 123 Đường ABC, Quận 1, TP. Hồ Chí Minh <br />+84 123 456 789</p>
+                            </li>
+                            <li>
+                                <h4>Email</h4>
+                                <p>support@malefashion.com</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div class="contact__form">
+                        <form action="/Home/SendContact" method="post">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <input type="text" name="FullName" placeholder="Tên của bạn" required>
+                                </div>
+                                <div class="col-lg-6">
+                                    <input type="email" name="Email" placeholder="Email" required>
+                                </div>
+                                <div class="col-lg-12">
+                                    <textarea name="MessageText" placeholder="Nội dung tin nhắn" required></textarea>
+                                    <button type="submit" class="site-btn">Gửi tin nhắn</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=..." height="500" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
 </main>
